<resources>
    <string name="facebook_app_id">1097356564056954</string>
    <string name="fb_login_protocol_scheme">fb1097356564056954</string>

    <string name="app_name">Gym Adviser</string>
    <string name="additional_participants">+%1$d</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="or">  or  </string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="have_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="inbox">Inbox</string>
    <string name="archived_events">Archived events</string>
    <string name="sign_out">Sign out</string>
    <string name="abort">Cancel</string>
    <string name="wanna_sign_out">Do you really want to sign out?</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="_public">Public</string>
    <string name="_private">Private</string>
    <string name="_friends">Friends</string>
    <string name="friends_visibility_about">Visible only for friends.</string>
    <string name="private_visibility_about">Visible only for invited people.</string>
    <string name="public_visibility_about">Visible for everyone.</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="event_name">Event name</string>
    <string name="place">Place</string>
    <string name="find_category">Find Category</string>
    <string name="add_photo">Add photo</string>
    <string name="cover_photo">Cover photo</string>
    <string name="nick">Nick</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="added_trainings">Added trainings</string>
    <string name="training_calories">%1$d cal</string>
    <string name="trainings">Trainings</string>
    <string name="find_training">Find training</string>
    <string name="add_training">Add training</string>
    <string name="pick_training_type">Pick training type</string>
    <string name="rest">Rest</string>
    <string name="rest_time_in_seconds">%1$d s</string>
    <string name="iteration">%1$d x</string>
    <string name="calories_about">~ %1$d cal</string>
    <string name="number_exercise">x %1$d</string>
    <string name="about">About</string>
    <string name="yt_link">Watch short instruction video</string>
    <string name="add_exercise">Add exercise</string>
    <string name="apply">apply</string>
    <string name="calories_min">Calories min</string>
    <string name="calories_max">Calories \Nmax</string>
    <string name="delete_account">Delete account</string>
    <string-array name="exercises_type">
        <item>OTHER</item>
        <item>ABS</item>
        <item>ARM</item>
        <item>BACK</item>
        <item>CHEST</item>
        <item>COOLDOWN</item>
        <item>LEG</item>
        <item>SHOULDER</item>
        <item>STRETCHING</item>
        <item>WARMUP</item>
    </string-array>
    <string-array name="training_type">
        <item>ALL</item>
        <item>OTHER</item>
        <item>AEROBIC</item>
        <item>BALANCE</item>
        <item>CARDIO</item>
        <item>CIRCUIT</item>
        <item>FUNCTIONAL</item>
        <item>HIIT</item>
        <item>INTERVAL</item>
        <item>RECOVERY</item>
        <item>STRENGTH</item>
        <item>STRETCHING</item>
        <item>SUPERSET</item>
        <item>TABATA</item>
    </string-array>
    <string name="delete_account_for_sure">Do you really want to delete this account?</string>
    <string name="yes">Yes</string>
</resources>