<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.apusart.skryptowe_projekt_android.ui.logged.search.SearchViewModel" />
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
        <com.apusart.components.MainInput
            android:id="@+id/filters_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:main_input_input_title="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <com.apusart.components.MainInput
                android:id="@+id/filters_calories_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/filters_calories_max"
                app:main_input_input_title="@string/calories_min"
                android:imeOptions="actionNext"
                android:inputType="number" />
            <com.apusart.components.MainInput
                android:id="@+id/filters_calories_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/filters_calories_min"
                app:main_input_input_title="@string/calories_max"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Spinner
            android:id="@+id/filters_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/filters_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:paddingHorizontal="100dp"
            android:layout_margin="5dp"
            style="@style/button.primary"/>
    </LinearLayout>
</layout>